# complaint-ticketing-system

./: .gitignore  .gitmodules  README.md  categories_to_departments.csv  intents_to_departments.csv  read_department.py  requirments.txt
backend/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  complaints.csv  config.py  extensions.py  intents_to_departments.csv  pyproject.toml  rag_model.ipynb  requirements.txt  requirementss.txt  seed_test_data.py
backend/chrome_langchain_db/: chroma.sqlite3
backend/chrome_langchain_db/41cb5fe3-cba0-4918-9e42-249c8c27ea2a/: index_metadata.pickle
backend/chrome_langchain_db/5e0ec994-9547-4270-91eb-61e9c1890a85/: index_metadata.pickle
backend/chrome_langchain_db/e1878091-939c-44eb-b90f-f8347276019d/: index_metadata.pickle
backend/dags/: bart_retrain_mlflow.py  bart_retraining_dag.py
backend/debug_figures/: category_distribution.html  dept_response.html  response_histogram.html  status_distribution.html  subcategories.html  timeseries.html
backend/instance/: app.db  app.rar
backend/migrations/versions/: 36eaa46da7b1_add_client_satisfaction_and_admin_eval_.py  758e978340de_removed_branch_from_department.py
backend/mlruns/0/: meta.yaml
backend/models/: complaint.py  department.py  sub_category.py  user.py
backend/resources/: analytics_views.py  auth.py  auth_views.py  complaint.py  complaint_views.py
backend/scripts/: seed_data.py
backend/services/: classification.py  recommendation.py  recommendation_finetune.py  recommendation_rag.py  recommender.py  vector.py
backend/static/: index.html
(+142 files in other folders)
